Add:  - adapters for recyclers  - listeners for screen events in translate fragment  - classed for storing in DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_history">История</string>
     <string name="title_favorites">Избранное</string>
 
+
+    <string name="def_from_lang">Русский</string>
+    <string name="def_to_lang">Английский</string>
+
 </resources>
