Add:  - get languages list (without error handling)  -save languages lists in db  (only ru interface)  -change "to" list when "from" language changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
 
     <string name="def_from_lang">Русский</string>
     <string name="def_to_lang">Английский</string>
+    <string name="licence">Переведено сервисом «Яндекс.Переводчик»</string>
+
 
 </resources>
