--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="licence">Переведено сервисом «Яндекс.Переводчик»</string>
 
 
+    <string name="err_unfortunate">При загрузке данных произошла ошибка</string>
+    <string name="err_wrong_key">Неправильный API-ключ</string>
+    <string name="err_invalid_key">API-ключ заблокирован</string>
+    <string name="err_too_many">Превышено суточное ограничение на объем переведенного текста</string>
+    <string name="err_long_text">Превышен максимально допустимый размер текста</string>
+    <string name="err_cant_translate">Текст не может быть переведен</string>
+    <string name="err_wrong_lang">Заданное направление перевода не поддерживается</string>
+
+
 </resources>
