Add: -language detect -license text in history and favorites pages
Fix:
- bag with asynchronous operations when "translate with" click. With this was changed all spinners methods - now they return new lang desc, and getLangList's method's in Utills

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_favorites">Избранное</string>
 
 
+    <string name="detect_text">Перевести с :</string>
     <string name="def_from_lang">Русский</string>
     <string name="def_to_lang">Английский</string>
     <string name="license">Переведено сервисом </string>
